11 a 14, falta move-down no requisito 13

--- a/index.html
+++ b/index.html
@@ -24,9 +24,23 @@
     </ol>
   </main>
   <footer>
-    <button id="remover-finalizados">Apagar itens finalizados</button>
+    <div>
+      <button id="remover-finalizados">Apagar tarefas finalizadas</button>
+      <br>
+      <button id="apaga-tudo">Apagar todas as tarefas</button>
+      <br>
+      <button id="remover-selecionado">Apagar tarefa selecionada</button>
+      <br>
+      <button id="salvar-tarefas">Salvar tarefas</button>
+    </div>
     <br>
-    <button id="apaga-tudo">Apagar todos os itens</button>
+    <div>
+      <button id="mover-cima">Mover para cima</button>
+      <br>
+      <button id="mover-baixo">Mover para baixo</button>
+      <br>
+    </div>
+
   <script src="./script.js"></script>
 </body>
 </html>
