--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
     <div>
       <label for="texto-tarefa">Novo item:</label>
-      <br>
       <input type="text" id="texto-tarefa">
       <button id="criar-tarefa">Adicionar item</button>
     </div>
   </header>
   <main>
-    <ol id="lista-tarefas">
+    <ol id="lista-tarefas" class="displayNone">
 
     </ol>
   </main>
