--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <h1>Minha Lista de Tarefas</h1>
-    <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+    <h1>Lista de Tarefas</h1>
+    <p id="funcionamento">Clique em um item para marcá-lo como completo ou clique duas vezes para seleciona-lo</p>
     <div>
       <label for="texto-tarefa">Novo item:</label>
       <input type="text" id="texto-tarefa">
